--- a/system_huellitas/views/admin/scrud_clientes.html
+++ b/system_huellitas/views/admin/scrud_clientes.html
@@ -106,6 +106,101 @@
             </div>
         </div>
     </main>
+    <!-- Modals -->
+    <!-- Ver admin -->
+    <div class="modal fade" id="ver_cliente" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- El modal se centra con modal-dialog-center, cuando esta en pantallas pequeñas toma todo el espacio de las pantallas -->
+        <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable modal-fullscreen-sm-down">
+            <div class="modal-content">
+                <div class="modal-header bg-orange-color">
+                    <div class="container text-center text-light">
+                        <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Información del cliente
+                        </h1>
+                    </div>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="" id="ver_cliente">
+                        <!-- Fila 1 -->
+                        <div class="container text-center">
+                            <div class="row align-items-center justify-content-center">
+                                <div class="col-sm-12 col-md-auto">
+                                    <img class="rounded-1" id="img_admin" src="../../resources/img/png/mujeeer.png"
+                                        width="120px">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fila 2 -->
+                        <div class="container mt-4">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-6 col-lg-6">
+                                    <div class="mb-3">
+                                        <label for="nombre_cliente" class="form-label fw-semibold">Nombre</label>
+                                        <input type="text" class="form-control" id="nombre_cliente"
+                                            name="nombre_cliente" disabled>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="apellido_cliente" class="form-label fw-semibold">Apellidos</label>
+                                        <input type="text" class="form-control" id="apellido_cliente"
+                                            name="apellido_cliente" disabled>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="contra_cliente" class="form-label fw-semibold">Teléfono</label>
+                                        <input type="text" class="form-control" id="contra_cliente"
+                                            name="correo_cliente" disabled>
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <label for="contra_cliente" class="form-label fw-semibold">Dirección</label>
+                                        <input type="text" class="form-control" id="contra_cliente"
+                                            name="correo_cliente" disabled>
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <label for="contra_cliente" class="form-label fw-semibold">Estado actual del
+                                            cliente</label>
+                                        <input type="text" class="form-control" id="estado_cliente"
+                                            name="estado_cliente" disabled>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 col-md-6 col-lg-6">
+                                    <div class="mb-3">
+                                        <label for="email_cliente" class="form-label fw-semibold">Correo</label>
+                                        <input type="email" class="form-control" id="email_cliente" name="email_cliente"
+                                            disabled>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="alias_cliente" class="form-label fw-semibold">DUI</label>
+                                        <input type="text" class="form-control" id="alias_cliente" name="alias_cliente"
+                                            disabled>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="alias_cliente" class="form-label fw-semibold">Fecha de
+                                            nacimiento</label>
+                                        <input type="text" class="form-control" id="alias_cliente" name="alias_cliente"
+                                            disabled>
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <label for="alias_cliente" class="form-label fw-semibold">Fecha registro
+                                            cliente</label>
+                                        <input type="text" class="form-control" id="contra_cliente"
+                                            name="fecha_registro_cliente" disabled>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                </div>
+                <div class="container text-center mb-4 mt-4">
+                    <button type="button" class="btn btn-orange-color text-light me-3"
+                        data-bs-dismiss="modal">Regresar</button>
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
@@ -113,102 +208,5 @@
 </body>
 
 
-
-
-
-<!-- Modals -->
-<!-- Ver admin -->
-<div class="modal fade" id="ver_cliente" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <!-- El modal se centra con modal-dialog-center, cuando esta en pantallas pequeñas toma todo el espacio de las pantallas -->
-    <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable modal-fullscreen-sm-down">
-        <div class="modal-content">
-            <div class="modal-header bg-orange-color">
-                <div class="container text-center text-light">
-                    <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Información del cliente</h1>
-                </div>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                    aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form action="" id="ver_cliente">
-                    <!-- Fila 1 -->
-                    <div class="container text-center">
-                        <div class="row align-items-center justify-content-center">
-                            <div class="col-sm-12 col-md-auto">
-                                <img class="rounded-1" id="img_admin" src="../../resources/img/png/mujeeer.png"
-                                    width="120px">
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Fila 2 -->
-                    <div class="container mt-4">
-                        <div class="row">
-                            <div class="col-sm-12 col-md-6 col-lg-6">
-                                <div class="mb-3">
-                                    <label for="nombre_cliente" class="form-label fw-semibold">Nombre</label>
-                                    <input type="text" class="form-control" id="nombre_cliente" name="nombre_cliente"
-                                        disabled>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="apellido_cliente" class="form-label fw-semibold">Apellidos</label>
-                                    <input type="text" class="form-control" id="apellido_cliente"
-                                        name="apellido_cliente" disabled>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="contra_cliente" class="form-label fw-semibold">Teléfono</label>
-                                    <input type="text" class="form-control" id="contra_cliente" name="correo_cliente"
-                                        disabled>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="contra_cliente" class="form-label fw-semibold">Dirección</label>
-                                    <input type="text" class="form-control" id="contra_cliente" name="correo_cliente"
-                                        disabled>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="contra_cliente" class="form-label fw-semibold">Estado actual del
-                                        cliente</label>
-                                    <input type="text" class="form-control" id="estado_cliente" name="estado_cliente"
-                                        disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-6 col-lg-6">
-                                <div class="mb-3">
-                                    <label for="email_cliente" class="form-label fw-semibold">Correo</label>
-                                    <input type="email" class="form-control" id="email_cliente" name="email_cliente"
-                                        disabled>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="alias_cliente" class="form-label fw-semibold">DUI</label>
-                                    <input type="text" class="form-control" id="alias_cliente" name="alias_cliente"
-                                        disabled>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="alias_cliente" class="form-label fw-semibold">Fecha de
-                                        nacimiento</label>
-                                    <input type="text" class="form-control" id="alias_cliente" name="alias_cliente"
-                                        disabled>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="alias_cliente" class="form-label fw-semibold">Fecha registro
-                                        cliente</label>
-                                    <input type="text" class="form-control" id="contra_cliente"
-                                        name="fecha_registro_cliente" disabled>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-            </div>
-            <div class="container text-center mb-4 mt-4">
-                <button type="button" class="btn btn-orange-color text-light me-3"
-                    data-bs-dismiss="modal">Regresar</button>
-            </div>
-            </form>
-        </div>
-    </div>
-</div>
 
 </html>
