--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -116,96 +116,103 @@
         </div>
     </main>
 
+    <!-- Modal para gestionar comentarios -->
+    <div class="modal fade" id="agcoment" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header bg-orange-color">
+                    <div class="container text-center">
+                        <!-- Título del modal -->
+                        <h1 class="modal-title fs-5 text-white fw-bold" id="exampleModalLabel">Comentarios - Detalles
+                        </h1>
+                    </div>
+                    <!-- Botón para cerrar el modal -->
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="" id="gestionar_comentario">
+                        <!-- Sección para cargar información del comentario -->
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="container d-flex align-items-center justify-content-center">
+                                    <img src="../../resources/img/png/ejemplo_producto.png"
+                                        class="tamanio_imagen_agregar" alt="">
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div>
+                                    <!-- Campos para nombre del producto y cliente -->
+                                    <label class="fs-8 btn-orange-color fw-semibold" for="nombre_producto_comentario">
+                                        Producto</label>
+                                    <input type="text" name="nombreProductoComentario" id="nombre_producto_comentario"
+                                        class="form-control" aria-label="codigo" disabled readonly>
+                                </div>
+                                <br>
+                                <div>
+                                    <label class="fs-8 btn-orange-color fw-semibold" for="nombre_cliente_comentario">
+                                        Cliente</label>
+                                    <input type="text" name="nombre_cliente_comentario" id="nombreClienteComentario"
+                                        class="form-control" aria-label="codigo" disabled readonly>
+                                </div>
+                            </div>
+                            <div class="col-4 d-flex flex-column align-items-center justify-content-center">
+                                <!-- Sección de valoración con estrellas -->
+                                <div class="row">
+                                    <div class="col-4">
+                                        <img src="../../resources/img/png/start_on.png" class="imagen_valoration"
+                                            alt="">
+                                    </div>
+                                    <div class="col-4">
+                                        <img src="../../resources/img/png/start_on.png" class="imagen_valoration"
+                                            alt="">
+                                    </div>
+                                    <div class="col-4 ">
+                                        <img src="../../resources/img/png/start_on.png" class="imagen_valoration"
+                                            alt="">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <img src="../../resources/img/png/start_on.png" class="imagen_valoration"
+                                            alt="">
+                                    </div>
+                                    <div class="col-6">
+                                        <img src="../../resources/img/png/start_off.png" class="imagen_valoration"
+                                            alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Mensaje del comentario -->
+                        <br>
+                        <div class="row container d-flex align-items-center mensaje_margin">
+                            <div class="mb-3">
+                                <div class="mb-3">
+                                    <label for="mensaje_comentario" class="form-label fw-semibold">Mensaje</label>
+                                    <!-- Área de texto para el mensaje del comentario -->
+                                    <textarea class="form-control" id="mensaje_comentario" name="mensajeComentario"
+                                        rows="3" disabled></textarea>
+                                </div>
+                                <br>
+                                <!-- Botones de acción (Agregar, Ocultar) -->
+                                <div class="container text-center">
+                                    <button type="button" class="btn btn-orange-color text-white mx-3">
+                                        Regresar</button>
+                                    <button type="button" class="btn btn-red-color text-white"> Ocultar</button>
+                                </div>
+                                <br>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Framework Bootstrap - JS -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../controllers/utils/admin.js"></script>
 </body>
-
-<!-- Modal para gestionar comentarios -->
-<div class="modal fade" id="agcoment" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header bg-orange-color">
-                <div class="container text-center">
-                    <!-- Título del modal -->
-                    <h1 class="modal-title fs-5 text-white fw-bold" id="exampleModalLabel">Comentarios - Detalles</h1>
-                </div>
-                <!-- Botón para cerrar el modal -->
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                    aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form action="" id="gestionar_comentario">
-                    <!-- Sección para cargar información del comentario -->
-                    <div class="row">
-                        <div class="col-4">
-                            <div class="container d-flex align-items-center justify-content-center">
-                                <img src="../../resources/img/png/ejemplo_producto.png" class="tamanio_imagen_agregar"
-                                    alt="">
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div>
-                                <!-- Campos para nombre del producto y cliente -->
-                                <label class="fs-8 btn-orange-color fw-semibold" for="nombre_producto_comentario">
-                                    Producto</label>
-                                <input type="text" name="nombreProductoComentario" id="nombre_producto_comentario"
-                                    class="form-control" aria-label="codigo" disabled readonly>
-                            </div>
-                            <br>
-                            <div>
-                                <label class="fs-8 btn-orange-color fw-semibold" for="nombre_cliente_comentario">
-                                    Cliente</label>
-                                <input type="text" name="nombre_cliente_comentario" id="nombreClienteComentario"
-                                    class="form-control" aria-label="codigo" disabled readonly>
-                            </div>
-                        </div>
-                        <div class="col-4 d-flex flex-column align-items-center justify-content-center">
-                            <!-- Sección de valoración con estrellas -->
-                            <div class="row">
-                                <div class="col-4">
-                                    <img src="../../resources/img/png/start_on.png" class="imagen_valoration" alt="">
-                                </div>
-                                <div class="col-4">
-                                    <img src="../../resources/img/png/start_on.png" class="imagen_valoration" alt="">
-                                </div>
-                                <div class="col-4 ">
-                                    <img src="../../resources/img/png/start_on.png" class="imagen_valoration" alt="">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <img src="../../resources/img/png/start_on.png" class="imagen_valoration" alt="">
-                                </div>
-                                <div class="col-6">
-                                    <img src="../../resources/img/png/start_off.png" class="imagen_valoration" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Mensaje del comentario -->
-                    <br>
-                    <div class="row container d-flex align-items-center mensaje_margin">
-                        <div class="mb-3">
-                            <div class="mb-3">
-                                <label for="mensaje_comentario" class="form-label fw-semibold">Mensaje</label>
-                                <!-- Área de texto para el mensaje del comentario -->
-                                <textarea class="form-control" id="mensaje_comentario" name="mensajeComentario" rows="3"
-                                    disabled></textarea>
-                            </div>
-                            <br>
-                            <!-- Botones de acción (Agregar, Ocultar) -->
-                            <div class="container text-center">
-                                <button type="button" class="btn btn-orange-color text-white mx-3"> Regresar</button>
-                                <button type="button" class="btn btn-red-color text-white"> Ocultar</button>
-                            </div>
-                            <br>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
 
 </html>
