Arreglo en el boton para cargar img

--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -163,9 +163,9 @@
                                     width="120px">
                             </div>
                             <div class="col">
-                                <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen"
-                                    name="btCargarImg">Cargar
-                                    imagen</button>
+                                <input type="file" class="form-control" id="upload" hidden>
+                                <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                <label class="btn btn-red-color text-light" for="upload">Cargar imagen</label>
                             </div>
                         </div>
                     </div>
@@ -234,9 +234,9 @@
                                 <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
                             </div>
                             <div class="col">
-                                <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen"
-                                    name="btnCargarImg">Cargar
-                                    imagen</button>
+                                <input type="file" class="form-control" id="upload" hidden>
+                                <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                <label class="btn btn-red-color text-light" for="upload">Cargar imagen</label>
                             </div>
                         </div>
                     </div>
