--- a/system_huellitas/views/admin/scrud_categorias.html
+++ b/system_huellitas/views/admin/scrud_categorias.html
@@ -158,8 +158,9 @@
                         <div class="col-sm-12 col-md-4 d-flex align-items-center">
                             <div>
                                 <!-- Botón para cargar imagen -->
-                                <button type="button" class="btn btn-red-color text-white btn-sm"> Cargar
-                                    Imagen</button>
+                                <input type="file" class="form-control" id="upload" hidden>
+                                <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                <label class="btn btn-red-color text-light btn-sm" for="upload">Cargar imagen</label>
                             </div>
                         </div>
                     </div>
@@ -218,8 +219,9 @@
                         <div class="col-sm-12 col-md-4 d-flex align-items-center">
                             <div>
                                 <!-- Botón para cargar imagen -->
-                                <button type="button" class="btn btn-red-color text-white btn-sm"> Cargar
-                                    Imagen</button>
+                                <input type="file" class="form-control" id="upload" hidden>
+                                <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                <label class="btn btn-red-color text-light btn-sm" for="upload">Cargar imagen</label>
                             </div>
                         </div>
                     </div>
