--- a/system_huellitas/views/admin/scrud_productos_gatos.html
+++ b/system_huellitas/views/admin/scrud_productos_gatos.html
@@ -157,9 +157,10 @@
                                     <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
                                 </div>
                                 <div class="col">
-                                    <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen"
-                                        name="btnCargarImg">Cargar
-                                        imagen</button>
+                                    <!-- Botón para cargar imagen -->
+                                    <input type="file" class="form-control" id="upload" hidden>
+                                    <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                    <label class="btn btn-red-color text-light" for="upload">Cargar imagen</label>
                                 </div>
                                 <div class="col-sm-12 col-md-auto">
                                     <div class="form-check form-switch float-end mb-md-5">
@@ -274,9 +275,10 @@
                                     <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
                                 </div>
                                 <div class="col">
-                                    <button type="button" class="btn btn-red-color text-light"
-                                        id="btn_cargarImagen">Cargar
-                                        imagen</button>
+                                    <!-- Botón para cargar imagen -->
+                                    <input type="file" class="form-control" id="upload" hidden>
+                                    <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                    <label class="btn btn-red-color text-light" for="upload">Cargar imagen</label>
                                 </div>
                                 <div class="col-sm-12 col-md-auto">
                                     <div class="form-check form-switch float-end mb-md-5">
