Cambios en los botones del sitio privado -correciones

--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -141,8 +141,10 @@
                             </div>
                             <br>
                             <div class="container text-center">
-                                <!-- Botón para cargar imagen -->
-                                <button type="button" class="btn btn-red-color text-white"> Cargar Imagen</button>
+                                    <!-- Botón para cargar imagen -->
+                                    <input type="file" class="form-control" id="upload" hidden>
+                                    <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                    <label class="btn btn-red-color text-light" for="upload">Cargar imagen</label>
                             </div>
                         </div>
                         <!-- Sección para ingresar el nombre de la marca -->
@@ -187,8 +189,10 @@
                             </div>
                             <br>
                             <div class="container text-center">
-                                <!-- Botón para cargar imagen -->
-                                <button type="button" class="btn btn-red-color text-white"> Cargar Imagen</button>
+                                    <!-- Botón para cargar imagen -->
+                                    <input type="file" class="form-control" id="upload" hidden>
+                                    <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                    <label class="btn btn-red-color text-light" for="upload">Cargar imagen</label>
                             </div>
                         </div>
                         <!-- Sección para ingresar el nombre de la marca -->
